# refills_perception_interface

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
data/: left_right.json
launch/: interface.launch  interface_donbot.launch
scripts/: dummy_interface.py  perception_interface.py  print_pose.py  pub_to_giskard.py  start_knowrob_with_beliefstate.py
src/refills_perception_interface/: MyBehavior.py  action_server_behavior.py  barcode_detection.py  count_products.py  detect_facings.py  detect_shelf_layers.py  knowrob_wrapper.py  move_arm.py  move_arm_kmr_iiwa.py  move_base.py  move_gripper.py  not_hacks.py  paths.py  query_behavior.py  robosherlock_wrapper.py  separator_detection.py  tfwrapper.py  utils.py
test/: test_dummy_interface.py  test_hacks.py  test_perception_interface.py
