<?xml version="1.0"?>
<package format="2">
  <name>refills_perception_interface</name>
  <version>0.1.0</version>
  <description>
    Provides real and dummy implemenation of the perception interface for the refills project.
  </description>

  <maintainer email="stelter@cs.uni-bremen.de">Simon Stelter</maintainer>
  <author email="stelter@cs.uni-bremen.de">Simon Stelter</author>

  <license>BSD-2-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>actionlib</depend>
  <depend>refills_msgs</depend>
  <depend>actionlib_msgs</depend>
  <test_depend>python-pytest</test_depend>

</package>
